@@ -204,7 +204,9 @@ admin.holo.remove.noHolo: '&4No holograms found'
 admin.holo.remove.success: '&6Hologram deleted'
 admin.title.success: '&6that players title has been changed'
 admin.title.reset: '&6That players title has been reset'
-admin.version: '&6Current plugin version: %s'
+admin.version: '&6Current plugin version: &b%s'
+admin.versionstorage: '&6Storage Method: &b%s'
+admin.versionversion: '&6Minecraft Version: &b%s'
 admin.noTeam: '&4That is not a team'
 admin.home.success: '&6You have been teleported to that teams home'
 admin.home.noHome: '&4That team does not have a home set'
